<resources>
    <string name="app_name">TriSelf Apps</string>
    <string name="title_home">Home</string>
    <string name="title_daily">Daily</string>
    <string name="title_gallery">Gallery</string>
    <string name="title_music">Music</string>
    <string name="title_profile">Profile</string>
    <string name="lorem_ipsum">lorem ipsum</string>
    <string name="start">Start</string>
    <string name="pageone">Selamat Datang Di Aplikasi TriSelf Apps</string>
    <string name="nextpage">Geser Kanan Untuk Ke Halaman Selanjutnya</string>
    <string name="tatacara">Tata Cara Penggunaan Aplikasi Triself Apps</string>
    <string name="pagetwo">Klik Menu Yang Ada Di Bawah Aplikasi Untuk Melihat konten yang ada</string>
    <string name="pagetwo1">Klik Menu Berupa Tab Untuk Melihat Konten Yang Ada(Letaknya Ada Diatas)</string>
    <string name="pagetwo2">Klik Button Refresh Untuk Merefresh Konten/Pagenya</string>
    <string name="pagetwo3">Klik Button Info Untuk Melihat Informasi Aplikasi Ini</string>
    <string name="pagethree">Silahkan Tekan Tombol Dibawah ini</string>
    <string name="swipe_right_to_nsecond_view">Geser kanan Untuk ke halaman selanjutnya</string>
    <string name="prevpage">Geser Kiri Untuk Ke Halaman Sebelumnya</string>
    <string name="profile">PROFILE &amp; INTEREST</string>
    <string name="name_profile">Tri Tafriyadi</string>
    <string name="age">21 Tahun</string>
    <string name="description">Gamers,Anak Rumahan, Terlihat Seperti Om-Om</string>
    <string name="title_interest">INTEREST</string>
    <string name="hobby">Hobby</string>
    <string name="makes">Makes</string>
    <string name="mikes">Mikes</string>
    <string name="interest">Interest</string>
    <string name="citacita">Cita-Cita</string>
    <string name="gaming">Gaming</string>
    <string name="sateayam">Sate Ayam</string>
    <string name="capcin">Capcin</string>
    <string name="games">Apex Legends,Rainbow Six Siege</string>
    <string name="backend">Backend Developer</string>
    <string name="activity">Activity</string>
    <string name="friends">friends</string>
    <string name="songs">songs</string>
    <string name="videos">videos</string>
    <string name="profile1">PROFILE</string>
    <string name="contact">contact</string>
    <string name="findme">find me</string>
    <string name="about">about</string>
    <string name="nama">NAMA</string>
    <string name="umur">UMUR</string>
    <string name="deskripsi">DESKRIPSI DIRI</string>
    <string name="codename">CODENAME</string>
    <string name="detail_codename">Ace Of Slugger,Skull Breaker,TrippyTeri,QuicklyBubble158</string>
    <string name="contact1">CONTACT</string>
    <string name="nomorwa">+62 851-5663-XXXX</string>
    <string name="gmail">skullbreaker@gmail.com</string>
    <string name="instagram">quicklybubble158</string>
    <string name="twitter">Tafriyadi273</string>
    <string name="findme1">FIND ME</string>
    <string name="findmehere">Find Me Here</string>
    <string name="about1">ABOUT</string>
    <string name="version">1.0.0</string>
    <string name="copyright">Copyright 2022</string>

</resources>