<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/icons8_house_48"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_daily"
        android:icon="@drawable/icons8_daily_64__1_"
        android:title="@string/title_daily" />

    <item
        android:id="@+id/navigation_gallery"
        android:icon="@drawable/icons8_gallery_48"
        android:title="@string/title_gallery" />

    <item
        android:id="@+id/navigation_music"
        android:icon="@drawable/icons8_boombox_48"
        android:title="@string/title_music" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/icons8_user_male_skin_type_4_48"
        android:title="@string/title_profile" />

</menu>