<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.skullbreker.triselfapps.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_daily"
        android:name="com.skullbreker.triselfapps.ui.daily.DailyFragment"
        android:label="@string/title_daily"
        tools:layout="@layout/fragment_daily" />

    <fragment
        android:id="@+id/navigation_gallery"
        android:name="com.skullbreker.triselfapps.ui.gallery.GalleryFragment"
        android:label="@string/title_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/navigation_music"
        android:name="com.skullbreker.triselfapps.ui.music.MusicFragment"
        android:label="@string/title_music"
        tools:layout="@layout/fragment_music" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.skullbreker.triselfapps.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>