<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black0202"
    tools:context=".ui.profile.DetailProfileFragment">
<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile1"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.022"
            tools:ignore="MissingConstraints">

        </androidx.appcompat.widget.AppCompatTextView>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="121dp"
            android:layout_height="131dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/img_20200828_072933"
            app:border_color="@color/white"
            app:border_width="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appCompatTextView"
            tools:ignore="MissingConstraints" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="84dp"
            android:layout_marginTop="36dp"
            android:text="@string/nama"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_image"
            tools:ignore="MissingConstraints">

        </androidx.appcompat.widget.AppCompatTextView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/name_profile"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.528"
            app:layout_constraintStart_toEndOf="@+id/appCompatTextView18"
            app:layout_constraintTop_toBottomOf="@+id/profile_image"
            tools:ignore="MissingConstraints">

        </androidx.appcompat.widget.AppCompatTextView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="84dp"
            android:layout_marginTop="44dp"
            android:text="@string/umur"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appCompatTextView18"
            tools:ignore="MissingConstraints">

        </androidx.appcompat.widget.AppCompatTextView>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:text="@string/age"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.473"
            app:layout_constraintStart_toEndOf="@+id/appCompatTextView19"
            app:layout_constraintTop_toBottomOf="@+id/appCompatTextView17"
            tools:ignore="MissingConstraints">

        </androidx.appcompat.widget.AppCompatTextView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="180dp"
            android:text="@string/deskripsi"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_image"
            tools:ignore="MissingConstraints">

        </androidx.appcompat.widget.AppCompatTextView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:gravity="center"
            android:text="@string/description"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appCompatTextView16"
            tools:ignore="MissingConstraints">

        </androidx.appcompat.widget.AppCompatTextView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/codename"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appCompatTextView13"
            tools:ignore="MissingConstraints">

        </androidx.appcompat.widget.AppCompatTextView>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/detail_codename"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appCompatTextView2"
            app:layout_constraintVertical_bias="0.389"
            tools:ignore="MissingConstraints">

        </androidx.appcompat.widget.AppCompatTextView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>

</FrameLayout>