<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/spanishgreen"
    tools:context=".ui.home.HomeFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022"
        tools:ignore="MissingConstraints">

    </androidx.appcompat.widget.AppCompatTextView>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="121dp"
        android:layout_height="131dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/img_20200828_072933"
        app:border_color="@color/white"
        app:border_width="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.089"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.125"
        tools:ignore="MissingConstraints" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="235dp"
        android:layout_height="151dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.655"
        app:layout_constraintStart_toEndOf="@+id/profile_image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.129"
        tools:ignore="MissingConstraints">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/name_profile"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="0dp"></androidx.appcompat.widget.AppCompatTextView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/age"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appCompatTextView4">

        </androidx.appcompat.widget.AppCompatTextView>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/description"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appCompatTextView3"
            tools:layout_editor_absoluteX="0dp">

        </androidx.appcompat.widget.AppCompatTextView>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="88dp"
        android:columnCount="3"
        android:orientation="horizontal"
        android:rowCount="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:layout_constraintVertical_bias="0.321"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            tools:ignore="MissingConstraints">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/appCompatTextView5"
                android:layout_width="98dp"
                android:layout_height="36dp"
                android:layout_row="0"
                android:layout_column="0"
                android:gravity="center"
                android:text="@string/hobby"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/circleImageView"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/gaming"
                app:border_color="@color/white"
                app:border_width="4dp"
                app:layout_constraintBottom_toTopOf="@+id/appCompatTextView6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appCompatTextView5"
                tools:ignore="MissingConstraints" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/appCompatTextView6"
                android:layout_width="98dp"
                android:layout_height="36dp"
                android:layout_row="0"
                android:layout_column="0"
                android:gravity="center"
                android:text="@string/gaming"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="135dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/appCompatTextView8"
                android:layout_width="98dp"
                android:layout_height="36dp"
                android:layout_row="0"
                android:layout_column="0"
                android:gravity="center"
                android:text="@string/makes"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/sateayam"
                app:border_color="@color/white"
                app:border_width="4dp"
                app:layout_constraintBottom_toTopOf="@+id/appCompatTextView7"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appCompatTextView8"
                tools:ignore="MissingConstraints" />

            <androidx.appcompat.widget.AppCompatTextView

                android:id="@+id/appCompatTextView7"
                android:layout_width="98dp"
                android:layout_height="36dp"
                android:layout_row="0"
                android:layout_column="0"
                android:gravity="center"
                android:text="@string/sateayam"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="2"
            tools:ignore="MissingConstraints">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/appCompatTextView10"
                android:layout_width="98dp"
                android:layout_height="36dp"
                android:layout_row="0"
                android:layout_column="0"
                android:gravity="center"
                android:text="@string/mikes"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/capcin"
                app:border_color="@color/white"
                app:border_width="4dp"
                app:layout_constraintBottom_toTopOf="@+id/appCompatTextView9"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appCompatTextView10"
                tools:ignore="MissingConstraints" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/appCompatTextView9"
                android:layout_width="98dp"
                android:layout_height="36dp"
                android:layout_row="0"
                android:layout_column="0"
                android:gravity="center"
                android:text="@string/capcin"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="195dp"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnSpan="2"
            tools:ignore="MissingConstraints">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/appCompatTextView12"
                android:layout_width="98dp"
                android:layout_height="36dp"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_columnSpan="1"
                android:gravity="center"
                android:text="@string/interest"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/circleImageView4"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_centerHorizontal="true"
                android:layout_marginEnd="30dp"
                android:src="@drawable/r6logo"
                app:border_color="@color/white"
                app:border_width="4dp"
                app:layout_constraintBottom_toTopOf="@+id/appCompatTextView11"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appCompatTextView12"
                tools:ignore="MissingConstraints" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/circleImageView2"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="30dp"
                android:src="@drawable/apexlogo"
                app:border_color="@color/white"
                app:border_width="4dp"
                app:layout_constraintBottom_toTopOf="@+id/appCompatTextView11"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appCompatTextView12"
                tools:ignore="MissingConstraints" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/appCompatTextView11"
                android:layout_width="197dp"
                android:layout_height="75dp"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_columnSpan="1"
                android:gravity="center"
                android:text="@string/games"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="2"
            tools:ignore="MissingConstraints">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/appCompatTextView15"
                android:layout_width="98dp"
                android:layout_height="36dp"
                android:layout_row="0"
                android:layout_column="0"
                android:gravity="center"
                android:text="@string/citacita"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/backendlogo"
                app:border_color="@color/white"
                app:border_width="4dp"
                app:layout_constraintBottom_toTopOf="@+id/appCompatTextView14"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appCompatTextView15"
                tools:ignore="MissingConstraints" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/appCompatTextView14"
                android:layout_width="101dp"
                android:layout_height="74dp"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_columnSpan="1"
                android:gravity="center"
                android:text="@string/backend"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>